--- a/IPSX/Flows/Login/Storyboard/Base.lproj/Login.storyboard
+++ b/IPSX/Flows/Login/Storyboard/Base.lproj/Login.storyboard
@@ -139,6 +139,8 @@
                     <navigationItem key="navigationItem" id="289-tN-zXf"/>
                     <connections>
                         <outlet property="backgroundImageView" destination="nnt-XC-RHm" id="4Qj-zb-AIs"/>
+                        <segue destination="Vks-3f-bfz" kind="unwind" identifier="showDashboardSegueID" unwindAction="unwindToDashboardWithSegue:" id="Ze8-f2-tBR"/>
+                        <segue destination="WaM-93-tC1" kind="show" identifier="showAddWalletSegueID" id="5cu-zl-FKV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="epG-9H-8yh" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -591,7 +593,7 @@
                 <viewControllerPlaceholder storyboardName="WalletAdd" id="WaM-93-tC1" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wsU-ND-ZvQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3612" y="440"/>
+            <point key="canvasLocation" x="2634" y="595"/>
         </scene>
     </scenes>
     <resources>
@@ -601,4 +603,7 @@
         <image name="emailIcon" width="27" height="20"/>
         <image name="keyIcon" width="25" height="26"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="5cu-zl-FKV"/>
+    </inferredMetricsTieBreakers>
 </document>
